# soma-retargeter

./: .gitignore  pyproject.toml
app/: bvh_to_csv_converter.py  motion_npz_player_common.py  play_npz_mujoco.py  play_npz_newton.py
assets/: default_bvh_to_csv_converter_config.json  default_bvh_to_csv_converter_config_q1.json
assets/motions/test-export/: Neutral_throw_ball_001__A057.csv  Neutral_throw_ball_001__A057.npz  Neutral_walk_forward_002__A057.csv  Neutral_walk_forward_002__A057.npz  big_light_one_hand_pick_up_front_low_R_005__A508.csv  big_light_one_hand_pick_up_front_low_R_005__A508.npz  body_stretch_1_004__A069.csv  body_stretch_1_004__A069.npz  dance_basic_chaines_180_R_001__A306.csv  dance_basic_chaines_180_R_001__A306.npz  dance_hiphop_shuffle_square_R_fast_002__A318.csv  dance_hiphop_shuffle_square_R_fast_002__A318.npz  high_jump_R_001__A277.csv  high_jump_R_001__A277.npz  item_pick_up_standing_R_001__A410.csv  item_pick_up_standing_R_001__A410.npz  small_light_one_hand_pick_up_front_low_002__A507.csv  small_light_one_hand_pick_up_front_low_002__A507.npz  wave_R_001__A428.csv  wave_R_001__A428.npz
soma_retargeter/configs/q1/: q1_feet_stabilizer_config.json  soma_to_q1_retargeter_config.json  soma_to_q1_scaler_config.json
soma_retargeter/pipelines/: feet_stabilizer.py  newton_pipeline.py  utils.py
soma_retargeter/renderers/: skeleton_renderer.py
soma_retargeter/utils/: animation_npz.py  newton_asset_utils.py
tests/: test_animation_npz_export.py  test_newton_asset_utils.py  test_play_npz_mujoco.py
