[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soma_retargeter"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE", "licenses/**/*.txt"]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["soma_retargeter*"]
exclude = ["app*", "assets*", "submodules*"]

[tool.setuptools.package-data]
soma_retargeter = ["configs/**/*.json", "configs/**/*.bvh", "configs/**/*.usd"]

[tool.setuptools.dynamic]
version = { attr = "soma_retargeter.__version__" }

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
warp-lang = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true
